fixed banner spacing

--- a/src/index.css
+++ b/src/index.css
@@ -33,9 +33,9 @@ code {
   color: white;
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 20px;
   margin-right: 3%;
-  margin-top: 2.5%;
 }
 
 .banner-links a{
